--- a/table/index.html
+++ b/table/index.html
@@ -8,10 +8,42 @@
 </head>
 <body>
 	<div class="header">
-	        Company Catalog
+	        <h1>Company Catalog</h1>
 	</div>
 	<div class="data">
-	        <!-- Put your Table Here -->
+			<!-- Put your Table Here -->
+			<table>
+				<tr class="header__titles">
+					<th>ID</th>
+					<th>Name</th>
+					<th class="header__prices">Prices</th>
+				</tr>
+				<tr>
+					<td>1</td>
+					<td>Item A</td>
+					<td>$0.50</td>
+			</tr>
+				<tr>
+					<td>2</td>
+					<td>Item B</td>
+					<td>$125.00</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td>Item C</td>
+					<td>$3.00</td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td>Item D</td>
+					<td>$1.00</td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td>Item E</td>
+					<td>$30.50</td>
+				</tr>
+			</table>
 	</div>
 </body>
 </html>
